# lab-task-tool

./: Cargo.toml  LICENSE  README.md
common/: Cargo.toml
common/src/: lib.rs
monitor/: Cargo.toml
monitor/src/: cli.rs  main.rs
task/: Cargo.toml
task/src/: cli.rs  main.rs
